# GPU-mandelbrot

./: CMakeLists.txt  README.md
src/: bench.cpp  heat_lut.cpp  heat_lut.hpp  mandel.cpp  mandel.cu  mandel_etu.cl  render.cpp  render.hpp  render_cpu.cpp  render_cpu.hpp  render_gpu.cpp  render_gpu.cu  render_gpu.hpp  render_mt.cpp  render_mt.hpp
